Rollback to Java 1.8 so that it can be included in CodeGen Tests Pipeline
We intend to use this example project as part of the CI Pipeline
for the [DGS Codegen] project. That project builds with JDK 1.8.
To facilitate such CI Pipeline we need to move this example project
to JDK 1.8.

[DGS Codegen]: https://github.com/Netflix/dgs-codegen